Minor performance related changes
Thanks FindBugs :)

- StringBuilder usage instead of string concatenation
- Inner classes should be static